--- a/visualizations/2020-10-29-tt-wk3-2020/index.qmd
+++ b/visualizations/2020-10-29-tt-wk3-2020/index.qmd
@@ -29,7 +29,7 @@ execute:
   eval: true
 ---
 
-![](){#fig-1}
+![Visualizing the relative password strength by categories of passwords. "rush2112" is the strongest password in the dataset. Source: Knowledge is Beautiful password dataset.](tt_2020_3.png){#fig-1}
 
 # 1. Load Packages & Setup
 
@@ -93,8 +93,8 @@ passwords %>%
 
 ```{r my_theme, include=TRUE}
 my_theme <- theme(
-  plot.title = element_markdown(family="Courier Prime", color="black", size=22, hjust=0, margin = margin(b = 10)), 
-  plot.subtitle = element_textbox_simple(family="Courier Prime", color="black", size=12, hjust=0, margin = margin(b = 10)), 
+  plot.title = element_markdown(family="Courier Prime", color="black", size=22, hjust=0, margin = margin(b = 5)), 
+  plot.subtitle = element_textbox_simple(family="Courier Prime", color="black", size=12, hjust=0, margin = margin(b = 5)), 
   axis.title = element_text(family="Courier Prime", color="black", face="bold", size=12), 
   axis.text = element_text(family="Courier Prime", color="black", size=13), 
   axis.ticks.y = element_blank(), 
@@ -136,7 +136,7 @@ my_theme <- theme(
   labs(x='\nRelative strength of password',
        y='',
        title='Relative **password strength** by category',
-       subtitle='Each dot represents a unique password from the Knowledge is Beautiful password database<br>**rush2112** is the password with the highest strength score in the dataset',
+       subtitle = "Each dot represents a unique password from the Knowledge is Beautiful password database<br><span style='margin-top:0.5em;'>**rush2112** is the password with the highest strength score in the dataset</span>",
        caption='Tidy Tuesday Week 3 (2020)<br>**Source**: Knowledge is Beautiful') + 
   my_theme + 
   theme(legend.position = 'none'))
@@ -149,7 +149,8 @@ my_theme <- theme(
 ggsave(
   filename = glue("tt_{tt_year}_{tt_week}.png"),
   plot = strength_viz,
-  width = 10, height = 6, units = "in", dpi = 300
+  width = 5, height = 3, units = "in",
+  dpi = 300
 )
 
 # make thumbnail for page
