--- a/visualizations/2020-10-29-tt-wk3-2020/index.qmd
+++ b/visualizations/2020-10-29-tt-wk3-2020/index.qmd
@@ -90,34 +90,28 @@ passwords_grp <- passwords %>%
 
 ```{r my_theme, include=TRUE}
 my_theme <- theme(
-  plot.title = element_markdown(family="Courier Prime", color="black", size=28, hjust=0, margin = margin(b = 5)), 
-  plot.subtitle = element_textbox_simple(family="Courier Prime", color="black", size=18, hjust=0, margin = margin(b = 5)), 
-  axis.title = element_text(family="Courier Prime", color="black", face="bold", size=12), 
-  axis.text = element_text(family="Courier Prime", color="black", size=16), 
-  axis.ticks.y = element_blank(), 
-  plot.caption = element_textbox_simple(family="Courier Prime", color="black", size=10), 
+  text = element_text(size = 16, family = "Courier Prime", color = 'black'),
+  axis.title = element_text(face="bold"), 
+  axis.ticks = element_blank(), 
   plot.background = element_blank(),
   panel.background =  element_blank(), 
   legend.background = element_blank(), 
-  panel.grid.major = element_line(colour = "grey90", linewidth = 0.5),
-  panel.grid.minor = element_line(colour = "grey93", linewidth = 0.5),
+  panel.grid.major = element_line(colour = "grey90", linewidth = 0.25),
+  panel.grid.minor = element_line(colour = "grey93", linewidth = 0.25),
   panel.border = element_blank(), 
-  legend.title=element_blank(), 
-  legend.text = element_text(family="Courier Prime", color="black", size=12, hjust=0),
-  legend.position = 'top',
-  strip.text = element_text(family="Courier Prime", color="black", size=14))
+  legend.position = 'none')
 ```
 
 # 6. Plot 
 
 ```{r strength_viz, include=TRUE, fig.width=10, fig.height=6, fig.align='center'}
-(strength_viz <- passwords_grp %>% 
+strength_viz <- passwords_grp %>% 
   ggplot(.,
          aes(x=strength,
                  y=reorder(category, 
                            median_password_strength))) + 
   geom_jitter(aes(color=category),
-              height=.2, width = .5) + 
+              height=.2, width = .5, size = .8) + 
   geom_vline(aes(xintercept = median(strength)),
              linetype='dashed') + 
   ggrepel::geom_text_repel(data=. %>%
@@ -125,18 +119,20 @@ my_theme <- theme(
                              slice_max(strength),
                             aes(label=password),
                            force=10,
-                           vjust = 4,
-                           # force_y = 4,
+                           vjust = 6,
                            family='Courier Prime',
                            box.padding = 1,
-                           size=6) +
-  labs(x='\nRelative strength of password',
+                           size=7) +
+  labs(x='Relative strength of password',
        y='',
        title='Relative **password strength** by category',
-       subtitle = "Each dot represents a unique password from the Knowledge is Beautiful password database<br><span style='margin-top:0.2em;'>**rush2112** is the password with the highest strength score in the dataset</span>",
+       subtitle = "Each dot represents a unique password from the Knowledge is Beautiful password database<br>**rush2112** is the password with the highest strength score in the dataset",
        caption='Tidy Tuesday Week 3 (2020)<br>**Source**: Knowledge is Beautiful') + 
   my_theme + 
-  theme(legend.position = 'none'))
+  theme(plot.title = element_markdown(size=rel(2.25), hjust=0, margin = margin(b = 5)),
+        plot.subtitle = element_textbox_simple(size=rel(1.3), hjust=0, margin = margin(t = 10, b = 15), lineheight = .4),
+        plot.caption = element_textbox_simple(size=rel(1.25), margin = margin(t = 10), lineheight = .4),
+        axis.text = element_text(size=rel(1.5)))
 ```
 
 # 7. Save 
@@ -146,8 +142,8 @@ my_theme <- theme(
 ggsave(
   filename = glue("tt_{tt_year}_{tt_week}.png"),
   plot = strength_viz,
-  width = 10, height = 6, units = "in",
-  dpi = 300
+  width = 5, height = 3.5, units = "in",
+  dpi = 320
 )
 
 # make thumbnail for page
